# c_homework

./: CMakeLists.txt  README.md
.github/workflows/: build-and-lint.yml
src/compilation_process/number_of_zero_elements/: number_of_zero_elements.c
src/compilation_process/search_for_a_substring/: search_for_a_substring.c
src/compilation_process/simple_bracket_balance/: simple_bracket_balance.c
src/control_work_1/fibonacci/: fibonacci.c
src/control_work_1/palindrome/: palindrome.c
src/control_work_1/sorting/: sorting.c
src/homework_deadline_25_sep/fast_calculation_of_polynomial/: fast_calculation_of_polynomial  fast_calculation_of_polynomial.c
src/homework_deadline_25_sep/incomplete_quotient/: incomplete_quotient  incomplete_quotient.c
src/homework_deadline_25_sep/lucky_tickets/: lucky_tickets  lucky_tickets.c
src/homework_deadline_25_sep/massive_reroll/: massive_reroll  massive_reroll.c
src/libraries_and_optimizations/optimal_sorting/: README.md  main.c  optimal_sorting.h  optimal_sorting.s
src/schitalochka/: compilation.md  cyclic_list.c  cyclic_list.h  main.c
src/sorted_list/: compilation.md  main.c  sorted_list.c  sorted_list.h
src/stack_and_queue/stack/: README.md  advanced_bracket_balance.c  sorting_station.c  stack.c  stack.h
